/*
Copyright 2023 KylinSoft  Co., Ltd.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

option go_package = "housekeeper.io/pkg/connection/proto";

package daemon;

service UpgradeCluster{
  rpc Upgrade(UpgradeRequest) returns (UpgradeResponse) {}
}

message UpgradeRequest {
  string kube_version = 1;
  string os_image_url = 2;
  string os_version = 3;
  bool control_plane = 4;
}

message UpgradeResponse {
  int32 err = 1;
}